Correct bad table files.

--- a/ups/messagefacility.table.in
+++ b/ups/messagefacility.table.in
@@ -6,7 +6,7 @@ Group:
 
 
 Flavor     = ANY
-Qualifiers = "+a5:+debug"
+Qualifiers = "a5:debug"
 
   Action = GetFQDir
        # faking out unsetup
@@ -15,10 +15,10 @@ Qualifiers = "+a5:+debug"
        fileTest( ${UPS_PROD_DIR}/${${UPS_PROD_NAME_UC}_FQ}, -d, "${UPS_PROD_DIR}/${${UPS_PROD_NAME_UC}_FQ} directory not found: SETUP ABORTED")
 
   Action = GetExtraProducts
-    setupRequired(fhiclcpp @FHICLCPP_VERSION@ -q @FHICLCPP_BASE_QUAL@:debug )
+    setupRequired(fhiclcpp @FHICLCPP_VERSION@ -q +@FHICLCPP_BASE_QUAL@:+debug )
 
 Flavor     = ANY
-Qualifiers = "+a5:+opt"
+Qualifiers = "a5:opt"
 
   Action = GetFQDir
        # faking out unsetup
@@ -27,10 +27,10 @@ Qualifiers = "+a5:+opt"
        fileTest( ${UPS_PROD_DIR}/${${UPS_PROD_NAME_UC}_FQ}, -d, "${UPS_PROD_DIR}/${${UPS_PROD_NAME_UC}_FQ} directory not found: SETUP ABORTED")
 
   Action = GetExtraProducts
-    setupRequired(fhiclcpp @FHICLCPP_VERSION@ -q @FHICLCPP_BASE_QUAL@:opt )
+    setupRequired(fhiclcpp @FHICLCPP_VERSION@ -q +@FHICLCPP_BASE_QUAL@:+opt )
 
 Flavor     = ANY
-Qualifiers = "+a5:+prof"
+Qualifiers = "a5:prof"
 
   Action = GetFQDir
        # faking out unsetup
@@ -39,10 +39,10 @@ Qualifiers = "+a5:+prof"
        fileTest( ${UPS_PROD_DIR}/${${UPS_PROD_NAME_UC}_FQ}, -d, "${UPS_PROD_DIR}/${${UPS_PROD_NAME_UC}_FQ} directory not found: SETUP ABORTED")
 
   Action = GetExtraProducts
-    setupRequired(fhiclcpp @FHICLCPP_VERSION@ -q @FHICLCPP_BASE_QUAL@:prof )
+    setupRequired(fhiclcpp @FHICLCPP_VERSION@ -q +@FHICLCPP_BASE_QUAL@:+prof )
 
 Flavor     = ANY
-Qualifiers = "+e1:+debug"
+Qualifiers = "e1:debug"
 
   Action = GetFQDir
        # faking out unsetup
@@ -51,10 +51,10 @@ Qualifiers = "+e1:+debug"
        fileTest( ${UPS_PROD_DIR}/${${UPS_PROD_NAME_UC}_FQ}, -d, "${UPS_PROD_DIR}/${${UPS_PROD_NAME_UC}_FQ} directory not found: SETUP ABORTED")
 
   Action = GetExtraProducts
-    setupRequired(fhiclcpp @FHICLCPP_VERSION@ -q @FHICLCPP_BASE_QUAL@:debug )
+    setupRequired(fhiclcpp @FHICLCPP_VERSION@ -q +@FHICLCPP_BASE_QUAL@:+debug )
 
 Flavor     = ANY
-Qualifiers = "+e1:+opt"
+Qualifiers = "e1:opt"
 
   Action = GetFQDir
        # faking out unsetup
@@ -63,10 +63,10 @@ Qualifiers = "+e1:+opt"
        fileTest( ${UPS_PROD_DIR}/${${UPS_PROD_NAME_UC}_FQ}, -d, "${UPS_PROD_DIR}/${${UPS_PROD_NAME_UC}_FQ} directory not found: SETUP ABORTED")
 
   Action = GetExtraProducts
-    setupRequired(fhiclcpp @FHICLCPP_VERSION@ -q @FHICLCPP_BASE_QUAL@:opt )
+    setupRequired(fhiclcpp @FHICLCPP_VERSION@ -q +@FHICLCPP_BASE_QUAL@:+opt )
 
 Flavor     = ANY
-Qualifiers = "+e1:+prof"
+Qualifiers = "e1:prof"
 
   Action = GetFQDir
        # faking out unsetup
@@ -75,7 +75,7 @@ Qualifiers = "+e1:+prof"
        fileTest( ${UPS_PROD_DIR}/${${UPS_PROD_NAME_UC}_FQ}, -d, "${UPS_PROD_DIR}/${${UPS_PROD_NAME_UC}_FQ} directory not found: SETUP ABORTED")
 
   Action = GetExtraProducts
-    setupRequired(fhiclcpp @FHICLCPP_VERSION@ -q @FHICLCPP_BASE_QUAL@:prof )
+    setupRequired(fhiclcpp @FHICLCPP_VERSION@ -q +@FHICLCPP_BASE_QUAL@:+prof )
 
 Common:
   Action = setup
