--- a/ups/messagefacility-config.cmake.in
+++ b/ups/messagefacility-config.cmake.in
@@ -1,9 +1,12 @@
-# compute installation prefix relative to this file
-get_filename_component (_dir "${CMAKE_CURRENT_LIST_FILE}" PATH)
-get_filename_component (_prefix "${_dir}/../.." ABSOLUTE)
 
-# import the targets
-include ("${_prefix}/lib/art-@version@/gromit-targets.cmake")
+set( @product@_VERSION @VERSION_MAJOR@.@VERSION_MINOR@.@VERSION_PATCH@ )
+set( @product@_UPS_VERSION v@VERSION_MAJOR@_@VERSION_MINOR@_@VERSION_PATCH@ )
 
-# report other information
-set (art_INCLUDE_DIRS "${_prefix}/include/art-@version@")
+@PACKAGE_INIT@
+
+find_library( MF_EXTENSIONS NAMES MF_ExtModules PATHS $ENV{MESSAGEFACILITY_LIB} )
+find_library( MF_MESSAGELOGGER NAMES MF_MessageLogger PATHS $ENV{MESSAGEFACILITY_LIB} )
+find_library( MF_MESSAGESERVICE NAMES MF_MessageService PATHS $ENV{MESSAGEFACILITY_LIB} )
+find_library( MF_UTILITIES NAMES MF_Utilities PATHS $ENV{MESSAGEFACILITY_LIB} )
+
+check_required_components(@product@)
