--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,11 +39,11 @@ cet_report_compiler_flags()
 cet_check_gcc()
 
 # these are minimum required versions, not the actual product versions
-# find_cet_product defines variables for external libraries and executables
-find_cet_product( cetbuildtools v2_02_00 )
-find_cet_product( cpp0x v1_03_02 )
-find_cet_product( cetlib v1_03_02 )
-find_cet_product( fhiclcpp v2_16_02  )
+# find_ups_product defines variables for external libraries and executables
+find_ups_product( cetbuildtools v2_03_00 )
+find_ups_product( cpp0x v1_03_02 )
+find_ups_product( cetlib v1_03_02 )
+find_ups_product( fhiclcpp v2_16_02  )
 find_ups_boost( v1_48_0 filesystem
                         thread
                         program_options )
