--- a/messagefacility/CMakeLists.txt
+++ b/messagefacility/CMakeLists.txt
@@ -1,5 +1,7 @@
 
+include(CetMake)
+
 add_subdirectory(Extensions)
 add_subdirectory(MessageLogger)
-#add_subdirectory(MessageService)
+add_subdirectory(MessageService)
 add_subdirectory(Utilities)
