Add ELsyslog class as destination option. Add syslog destination option:
-  add new class ELsyslog that inherits from ELoutput
-  adjust ELadministrator with some C++11 semantics

-  add tools/syslog/ dir with rsyslog conf. example and sqlite3 router

--- a/messagefacility/MessageLogger/CMakeLists.txt
+++ b/messagefacility/MessageLogger/CMakeLists.txt
@@ -18,6 +18,7 @@ SET (MSsrcFiles
        ../MessageService/ELoutput.cc
        ../MessageService/ELrecv.cc
        ../MessageService/ELstatistics.cc
+       ../MessageService/ELsyslog.cc
        ../MessageService/ELtsErrorLog.cc
        ../MessageService/ErrorLog.cc
        ../MessageService/HardwiredDefaults.cc
