--- a/test/Integration/MessageFacility.cfg
+++ b/test/Integration/MessageFacility.cfg
@@ -1,7 +1,7 @@
-MessageFacility : {
+message : {
 
     # array of debug modules
-    debugModules : ["*"],
+    debugModules : ["*"]
 
     # message logger destinations
     destinations :
@@ -9,40 +9,40 @@ MessageFacility : {
         LogToConsole :
         {
             # type for stdout
-            type : "cout",
+            type : "cout"
             # threshold for this destination
-            threshold : "DEBUG",
+            threshold : "DEBUG"
             # filtering based on categories
             categories :
             {
                 default : { limit : -1 }
             }
-        },
+        }
 
         LogToFile :
         {
             # type for logging to file
-            type : "file",
+            type : "file"
             # output file name
-            filename : "mylog",
+            filename : "mylog"
             # threshold filtering for this destination
-            threshold : "DEBUG",
+            threshold : "DEBUG"
             # output statistics information to the output file
-            outputStatistics : true,
+            outputStatistics : true
             # filtering based on categories
             categories :
             {
-                interestingToMe : { limit : 200 },
+                interestingToMe : { limit : 200 }
                 default : { limit : 0 }
             }
-        },
+        }
 
         LogToServer :
         {
             # type for remote server logging
-            type : "dds",
+            type : "dds"
             # threshold filtering
-            threshold : "WARNING"
+            threshold : "WARNING" 
         }
     }
 }
