--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,4 +1,11 @@
+# ======================================================================
+#
+# Testing
+#
+# ======================================================================
+
 cet_enable_asserts()
+include(CetTest)
 
 add_subdirectory(Utilities)
 add_subdirectory(Integration)
