--- a/test/Integration/CMakeLists.txt
+++ b/test/Integration/CMakeLists.txt
@@ -10,42 +10,10 @@ CONFIGURE_FILE (
     COPYONLY
     )
 
-# ----------------------------------------------------------------------
-# Identify tests:
-
-set ( TEST_LIST
-      MFTest
-      MFTimingService
-#      mfexample
-    )
-
-set ( ALSO_BUILD )
-
-set ( ALSO_RUN )
-
 link_libraries( MF_MessageLogger )
 
-# ----------------------------------------------------------------------
-# Build most tests:
+cet_test_env(CLEAR "FHICL_FILE_PATH=${CMAKE_CURRENT_SOURCE_DIR}")
 
-foreach ( test ${TEST_LIST} ${ALSO_BUILD} )
-  add_executable ( ${test} ${test}.cc )
-endforeach ( test ${TEST_LIST} ${ALSO_BUILD} )
+cet_test( MFTest )
+cet_test( MFTimingService )
 
-# ----------------------------------------------------------------------
-# Build tests with special requirements:
-
-#add_executable( sha1_test_performance sha1_test_performance.cc sha1.cpp )
-#target_link_libraries( sha1_test_performance cetlib )
-
-# ----------------------------------------------------------------------
-# Run tests:
-
-# FIXME MFTest and mfexample need working new-style configurations.
-foreach ( test ${TEST_LIST} ${ALSO_RUN} )
-  add_test ( ${test} ${EXECUTABLE_OUTPUT_PATH}/${test} )
-endforeach ( test ${TEST_LIST} )
-
-# Non-standard tests:
-
-# ======================================================================
