Add plugin capability to messagefacility

--- a/messagefacility/MessageLogger/CMakeLists.txt
+++ b/messagefacility/MessageLogger/CMakeLists.txt
@@ -5,6 +5,7 @@
 #  CMake build file for library MessageLogger and MessageLoggerS
 #
 
+
 FILE (GLOB MLsrcFiles *.cc)
 FILE (GLOB MSsrcFiles ../MessageService/*.cc)
 
@@ -13,8 +14,7 @@ cet_make_library( LIBRARY_NAME MF_MessageLogger
         	  LIBRARIES 
                   MF_Utilities 
                   ${FHICLCPP} 
-                  ${Boost_THREAD_LIBRARY} 
-        	  WITH_STATIC_LIBRARY )
+                  ${Boost_THREAD_LIBRARY} )
 
 # install files
 install_headers( EXTRAS classes.h )
