--- a/test/Integration/CMakeLists.txt
+++ b/test/Integration/CMakeLists.txt
@@ -4,16 +4,25 @@
 #
 # ======================================================================
 
+include( BasicPlugin )
+
+basic_plugin( ELpluginTest plugin
+              MF_MessageLogger
+              NO_INSTALL )
+
 CONFIGURE_FILE (
     ${CMAKE_CURRENT_SOURCE_DIR}/MessageFacilityTest.cfg
     ${CMAKE_CURRENT_BINARY_DIR}/MessageFacility.cfg
     COPYONLY
     )
 
-link_libraries( MF_MessageLogger )
-
 cet_test_env(CLEAR "FHICL_FILE_PATH=${CMAKE_CURRENT_SOURCE_DIR}")
 
-cet_test( MFTest )
-cet_test( MFTimingService )
+cet_test( MFTest 
+          LIBRARIES
+          MF_MessageLogger )
+
+cet_test( MFTimingService 
+          LIBRARIES
+          MF_MessageLogger )
 
