--- a/test/Integration/CMakeLists.txt
+++ b/test/Integration/CMakeLists.txt
@@ -4,12 +4,6 @@
 #
 # ======================================================================
 
-include( BasicPlugin )
-
-basic_plugin( ELpluginTest mfplugin
-  MF_MessageLogger
-  NO_INSTALL )
-
 CONFIGURE_FILE (
   ${CMAKE_CURRENT_SOURCE_DIR}/MessageFacilityTest.cfg
   ${CMAKE_CURRENT_BINARY_DIR}/MessageFacility.cfg
@@ -18,22 +12,26 @@ CONFIGURE_FILE (
 
 cet_test_env(CLEAR "FHICL_FILE_PATH=${CMAKE_CURRENT_SOURCE_DIR}")
 
+# cout test
 cet_test( messagefacility_destination_cout_t HANDBUILT
   TEST_EXEC ELdestinationTester
   TEST_ARGS messageFacility_cout.fcl
   )
 
+# cerr test
 cet_test( messagefacility_destination_cerr_t HANDBUILT
   TEST_EXEC ELdestinationTester
   TEST_ARGS messageFacility_cerr.fcl
   )
 
+# file test
 cet_test( messagefacility_destination_file_t HANDBUILT
   TEST_EXEC ELdestinationTester
   TEST_ARGS messageFacility_file.fcl
   )          
 
-cet_test( messagefacility_destination_plugin_t HANDBUILT
+# syslog test
+cet_test( messagefacility_destination_syslog_t HANDBUILT
   TEST_EXEC ELdestinationTester
-  TEST_ARGS messageFacility_ELplugin.fcl
+  TEST_ARGS messageFacility_syslog.fcl
   )          
