Implement issue #8021: Add Boost program options to ELdestinationTester

--- a/messagefacility/MessageLogger/CMakeLists.txt
+++ b/messagefacility/MessageLogger/CMakeLists.txt
@@ -9,7 +9,7 @@
 FILE (GLOB MLsrcFiles *.cc)
 FILE (GLOB MSsrcFiles ../MessageService/*.cc)
 
-LIST ( REMOVE_ITEM MSsrcFiles ../MessageService/ELdestinationTester.cc )
+LIST ( REMOVE_ITEM MSsrcFiles ${CMAKE_CURRENT_SOURCE_DIR}/../MessageService/ELdestinationTester.cc )
 
 cet_make_library( LIBRARY_NAME MF_MessageLogger
                   SOURCE  ${MLsrcFiles} ${MSsrcFiles}
