--- a/messagefacility/MessageService/CMakeLists.txt
+++ b/messagefacility/MessageService/CMakeLists.txt
@@ -6,8 +6,12 @@
 # !! MessageService/ Files built in ../MessageLogger/CMakeLists.txt !!
 
 cet_make_exec( ELdestinationTester
-               SOURCE ELdestinationTester.cc
-               LIBRARIES MF_MessageLogger )
+  SOURCE ELdestinationTester.cc
+  LIBRARIES
+  MF_MessageLogger
+  ${Boost_FILESYSTEM_LIBRARY}
+  ${Boost_PROGRAM_OPTIONS_LIBRARY}
+  )
 
 add_subdirectory(plugins)
 
