Fix cmake error for running tests

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,6 +7,8 @@
 cet_enable_asserts()
 include(CetTest)
 
+cet_test_env("FHICL_FILE_PATH=.")
+
 add_subdirectory(Utilities)
 add_subdirectory(Integration)
 add_subdirectory(MessageService)
