--- a/test/MessageService/CMakeLists.txt
+++ b/test/MessageService/CMakeLists.txt
@@ -7,11 +7,6 @@
 # Get all FHiCL files
 FILE (GLOB testConfigFiles fhicl-files/*.fcl )
 
-# Exclude the following *.fcl files
-# LIST ( REMOVE_ITEM testConfigFiles )
-
-cet_test_env(CLEAR "FHICL_FILE_PATH=${CMAKE_CURRENT_SOURCE_DIR}")
-
 foreach ( filename ${testConfigFiles} )
 
   # trim directory prefixes and .fcl suffix
@@ -19,7 +14,9 @@ foreach ( filename ${testConfigFiles} )
 
   cet_test( messagefacility_${testname}_t HANDBUILT
     TEST_EXEC ELdestinationTester
-    TEST_ARGS ${filename}
+    TEST_ARGS -c ${filename}
+    DATAFILES
+    ${filename}
     )
 
 endforeach()
