Build using cetbuildtools2
Update cmake scripts to use cetbuildtools2 and standard find_package.
Explicitly list sources in scripts, maintaining awkward separation
between MessageLogger and MessageService sources and build of
overall MF_MessageLogger library target. Only build shared libs
at present.

Update tests to use ELdestinationTester program using genexps.
Tests currently do not run on Mac due to:

i) Continued use of DYLD_LIBRARY_PATH for plugin lookup
ii) Plugin builds require the basic_plugin module/function.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,43 +15,42 @@
 #  make install
 #  make package (builds distribution tarfile)
 
-cmake_minimum_required (VERSION 2.8) # use cmake 2.8 or later
-
-project(messagefacility)
+cmake_minimum_required(VERSION 3.3)
+project(messagefacility VERSION )
 
 # cetbuildtools contains our cmake modules
-SET ( CETBUILDTOOLS_VERSION $ENV{CETBUILDTOOLS_VERSION} )
-IF (NOT CETBUILDTOOLS_VERSION)
-    MESSAGE (FATAL_ERROR "ERROR: setup cetbuildtools to get the cmake modules")
-ENDIF()
-set(CMAKE_MODULE_PATH $ENV{CETBUILDTOOLS_DIR}/Modules ${CMAKE_MODULE_PATH})
+# - Cetbuildtools, version2
+find_package(cetbuildtools2 0.1.0 REQUIRED)
+set(CMAKE_MODULE_PATH ${cetbuildtools2_MODULE_PATH})
+include(CetInstallDirs)
+include(CetCMakeSettings)
+include(CetCompilerSettings)
 
-include(CetCMakeEnv)
-cet_cmake_env()
-
-cet_set_compiler_flags(DIAGS VIGILANT
-  WERROR
-  NO_UNDEFINED
-  EXTRA_FLAGS -pedantic
+# C++ Standard Config
+set(CMAKE_CXX_EXTENSIONS OFF)
+set(messagefacility_COMPILE_FEATURES
+  cxx_auto_type
+  cxx_generic_lambdas
   )
-cet_report_compiler_flags()
-
 
 # these are minimum required versions, not the actual product versions
 # find_ups_product defines variables for external libraries and executables
-find_ups_product (cetbuildtools v4_14_01)
-find_ups_product( fhiclcpp v2_17_00  )
-find_ups_product( sqlite v3_08_05_00 )
-find_ups_boost(v1_50_0)
+find_package(fhiclcpp 3.1.0 REQUIRED)
+find_package(cetlib 1.17 REQUIRED)
+find_package(SQLite 3.8.5.0 REQUIRED)
+find_package(Boost 1.50.0 REQUIRED thread program_options filesystem)
 
 # The environment has been established, now generate the Makefiles.
 
 add_subdirectory(messagefacility)
-add_subdirectory(perllib)
-add_subdirectory(test)
-add_subdirectory(xcompile)
-add_subdirectory(ups)
+#add_subdirectory(perllib)
+
+if(BUILD_TESTING)
+  add_subdirectory(test)
+endif()
+#add_subdirectory(xcompile)
+#add_subdirectory(ups)
 
 # This step enables building the package tarball
 # packaging utility
-include(UseCPack)
+#include(UseCPack)
