Add minimal Doxygen generation/install

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,6 +51,27 @@ endif()
 #add_subdirectory(xcompile)
 #add_subdirectory(ups)
 
+#-----------------------------------------------------------------------
+# Documentation
+#
+find_package(Doxygen 1.8)
+if(DOXYGEN_FOUND)
+  set(DOXYGEN_OUTPUT_DIR "${CMAKE_CURRENT_BINARY_DIR}/Doxygen")
+  configure_file(Doxyfile.in Doxyfile @ONLY)
+  add_custom_command(
+    OUTPUT "${DOXYGEN_OUTPUT_DIR}/html/index.html"
+    COMMAND "${DOXYGEN_EXECUTABLE}" "${CMAKE_CURRENT_BINARY_DIR}/Doxyfile"
+    WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}"
+    DEPENDS "${CMAKE_CURRENT_BINARY_DIR}/Doxyfile" MF_MessageLogger MF_Utilities
+    COMMENT "Generating Doxygen docs for ${PROJECT_NAME}"
+    )
+  add_custom_target(doc ALL DEPENDS "${DOXYGEN_OUTPUT_DIR}/html/index.html")
+  install(DIRECTORY "${DOXYGEN_OUTPUT_DIR}/"
+    DESTINATION "${CMAKE_INSTALL_DATAROOTDIR}/${PROJECT_NAME}/API"
+    )
+endif()
+
+
 # This step enables building the package tarball
 # packaging utility
 #include(UseCPack)
