Install targets and support files
Implement install rules for MF targets and files. Split install between
binaries and headers due to awkward layout.

Add suitable exclude rules for headers, again, due to awkward layout
of files.

--- a/messagefacility/MessageLogger/CMakeLists.txt
+++ b/messagefacility/MessageLogger/CMakeLists.txt
@@ -144,6 +144,13 @@ target_link_libraries(MF_MessageLogger-static
   Boost::thread
   )
 
+# - Install
+install(TARGETS MF_MessageLogger MF_MessageLogger-static
+  EXPORT ${PROJECT_NAME}Targets
+  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+  )
 
 
 
